--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,14 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+<app-header>
+  <ion-toolbar color="primary">
+    <ion-title>Lista de Guitarras</ion-title>
   </ion-toolbar>
-</ion-header>
+</app-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content>
+  <ion-list>
+    <app-guitarra-item 
+      *ngFor="let guitarra of listaDeGuitarras" 
+      [guitarra]="guitarra">
+    </app-guitarra-item>
+  </ion-list>
 </ion-content>
