--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,14 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+ion-card {
+  margin: 10px;
+  border-radius: 12px;
+  transition: transform 0.2s ease;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+ion-card:hover {
+  transform: scale(1.02);
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.fuera-produccion {
+  color: red;
+  font-weight: bold;
 }
