Finalización de punto 3

--- a/src/app/components/app-header/app-header.component.html
+++ b/src/app/components/app-header/app-header.component.html
@@ -1,5 +1,8 @@
 <ion-header>
   <ion-toolbar color="dark">
+    <ion-buttons slot="start">
+      <ion-icon name="musical-notes-sharp" size="large" color="primary"></ion-icon>
+    </ion-buttons>
     <ion-title>Galería de Guitarras</ion-title>
   </ion-toolbar>
 </ion-header>
