--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -2,7 +2,10 @@
 // http://ionicframework.com/docs/theming/
 
 :root {
-  /** Color primario: dorado **/
+  // Definimos la fuente
+  --ion-font-family: "Playfair Display", serif;
+
+  // Color primario: dorado 
   --ion-color-primary: #d4af37;
   --ion-color-primary-rgb: 212, 175, 55;
   --ion-color-primary-contrast: #000000;
@@ -10,11 +13,15 @@
   --ion-color-primary-shade: #b8962f;
   --ion-color-primary-tint: #d9b84a;
 
-  /** Color secundario: rojo oscuro **/
+  // Color secundario: rojo oscuro 
   --ion-color-secondary: #b71c1c;
   --ion-color-secondary-rgb: 183, 28, 28;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
   --ion-color-secondary-shade: #9e1818;
   --ion-color-secondary-tint: #c13a3a;
+}
+ion-title, h1, h2, h3, h4, h5, h6, ion-card-title {
+  font-weight: 900; 
+  font-style: italic;
 }
