--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -4,14 +4,71 @@
   </ion-toolbar>
 </app-header>
 
-<ion-content>
+
+<ion-content [fullscreen]="true">
+  
   <ion-grid>
-    <ion-row>
-      <ion-col size="12" size-md="6" size-lg="4" *ngFor="let guitarra of listaDeGuitarras">
-        <ion-card [color]="guitarra.enProduccion ? 'primary' : 'light'">
-          <app-guitarra-item [guitarra]="guitarra"></app-guitarra-item>
+    
+    <ion-row class="ion-padding">
+      <ion-col size="12">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>Añadir Nueva Guitarra</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+
+            <ion-list lines="full">
+              <ion-item>
+                <ion-label position="floating">Nombre del Modelo</ion-label>
+                <ion-input [(ngModel)]="nuevaGuitarra.nombre" type="text" required name="nombre"></ion-input>
+              </ion-item>
+
+              <ion-item>
+                <ion-label position="floating">Estilo de Corte</ion-label>
+                <ion-input [(ngModel)]="nuevaGuitarra.corte" type="text" required name="corte"></ion-input>
+              </ion-item>
+
+              <ion-item>
+                <ion-label position="floating">Año de Lanzamiento</ion-label>
+                <ion-input [(ngModel)]="nuevaGuitarra.anio" type="number" required name="anio"></ion-input>
+              </ion-item>
+
+              <ion-item>
+                <ion-label position="floating">URL de Imagen</ion-label>
+                <ion-input [(ngModel)]="nuevaGuitarra.imagen" type="text" name="imagen"></ion-input>
+              </ion-item>
+
+              <ion-item lines="none" class="ion-margin-top">
+                <ion-toggle [(ngModel)]="nuevaGuitarra.enProduccion" labelPlacement="end" checked name="enProduccion">
+                  En Producción
+                </ion-toggle>
+              </ion-item>
+
+            </ion-list>
+            
+            <ion-button expand="block" class="ion-margin-top"  (click)="mostrarAlertaConfirmacion()" (click)="agregarGuitarra()" (click)="mostrarToast()">
+              Añadir Guitarra a la Lista
+            </ion-button>
+            
+          </ion-card-content>
         </ion-card>
       </ion-col>
     </ion-row>
+    
+    <ion-row>
+      <ion-col><hr></ion-col>
+    </ion-row>
+
+    <ion-row class="ion-padding-horizontal">
+      <ion-col size="12" size-md="6" size-lg="4" *ngFor="let guitarra of listaDeGuitarras">
+        
+        <ion-card [color]="guitarra.enProduccion ? 'primary' : 'light'">
+          <app-guitarra-item [guitarra]="guitarra"></app-guitarra-item>
+        </ion-card>
+
+      </ion-col>
+    </ion-row>
+    
   </ion-grid>
+
 </ion-content>
