Fix about y comienzo ver-detalles-guitarra

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,13 @@
 <ion-header>
   <ion-toolbar color="secondary">
     <ion-title>Galería de Guitarras</ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button routerLink="/about" routerDirection="forward">
+        <ion-icon slot="icon-only" name="information-circle-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+  
   </ion-toolbar>
 </ion-header>
 
