--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -11,4 +11,6 @@
 <ion-content class="ion-padding">
   <h2>Galería de guitarras V1.0</h2>
   <p>Desarrollado por Yoël Gómez Benítez - Módulo de Desarrollo de Aplicaciones Híbridas</p>
+  <p>2º - DAW</p>
+  <img src="assets/images/miCara.jpg" alt="Foto de mi cara">
 </ion-content>
