--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -51,3 +51,7 @@ ion-title, h1, h2, h3, h4, h5, h6, ion-card-title {
   font-weight: 900; 
   font-style: italic;
 }
+
+.derecha {
+  text-align: right;
+}
