--- a/src/app/pages/ver-detalles-guitarra/ver-detalles-guitarra.page.html
+++ b/src/app/pages/ver-detalles-guitarra/ver-detalles-guitarra.page.html
@@ -1,13 +1,79 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>verDetalles-guitarra</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/guitarras"></ion-back-button>
+    </ion-buttons>
+    <ion-title>{{ guitarra ? guitarra.nombre : 'Detalle de Guitarra' }}</ion-title>
+    <ion-buttons slot="end">
+      <ion-button 
+        color="danger" 
+        (click)="confirmarYEliminar()"
+        [disabled]="!guitarra"
+      >
+        <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">verDetalles-guitarra</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding fondo-paisley">
+  
+  <div *ngIf="guitarra; else noEncontrada">
+    
+    <div class="ion-text-center">
+      
+
+      <img [src]="guitarra.imagen" alt="{{ guitarra.nombre }}">
+
+    </div>
+    
+    
+    <ion-list>
+
+      <ion-item>
+        <ion-label>
+          <h1 class="ion-text-center">{{ guitarra.nombre }}</h1>
+        </ion-label>
+      </ion-item>
+      
+      <ion-item>
+        <ion-label>
+          <h3>Corte</h3>
+          <p>{{ guitarra.corte }}</p>
+        </ion-label>
+      </ion-item>
+      
+      <ion-item>
+        <ion-label>
+          <h3>Año de Introducción</h3>
+          <p>{{ guitarra.anio }}</p>
+        </ion-label>
+      </ion-item>
+      
+      <ion-item>
+        <ion-label>
+          <h3>Estado</h3>
+          <p>
+            <ion-badge [color]="guitarra.enProduccion ? 'success' : 'danger'">
+              {{ guitarra.enProduccion ? 'En Producción' : 'Descontinuada' }}
+            </ion-badge>
+          </p>
+        </ion-label>
+      </ion-item>
+      
+      <ion-item lines="none">
+        <ion-label color="medium"><small>ID: {{ guitarra.id }}</small></ion-label>
+      </ion-item>
+      
+    </ion-list>
+  </div>
+
+  <ng-template #noEncontrada>
+    <div class="ion-text-center">
+      <h2>Guitarra no encontrada</h2>
+      <p>Lo sentimos, el modelo de guitarra no se ha podido cargar.</p>
+      <ion-button routerLink="/guitarras">Volver al listado</ion-button>
+    </div>
+  </ng-template>
+
 </ion-content>
