--- a/src/app/pages/ver-detalles-guitarra/ver-detalles-guitarra.page.html
+++ b/src/app/pages/ver-detalles-guitarra/ver-detalles-guitarra.page.html
@@ -60,7 +60,7 @@
         <ion-label color="medium"><small>ID: {{ guitarra.id }}</small></ion-label>
       </ion-item>
 
-      <ion-item>
+      <ion-item style="text-align: center;">
         <ion-button style="background-color: green;" class="botonGuardar" (click)="guardarCambios()">Guardar</ion-button>
       </ion-item>
 
